# fed-word2vec

./: .gitignore  README.md  config.yaml  pyproject.toml
notebooks/: Final Project_2MDNG99XU.zpln  transcript download and data fillter.ipynb
src/: __init__.py  text_cleaner.py
src/fed_word2vec/: __init__.py  cli.py  config.py  downloader.py
